// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. key facts with title 1`] = `
<View>
  <Text>
    Example title
  </Text>
  <View>
    <View>
      <View />
      <Text
        allowFontScaling={false}
      >
        Example bullet text
      </Text>
    </View>
    <View>
      <View />
      <Text
        allowFontScaling={false}
      >
        An example 
        <Text
          accessibilityRole="link"
          allowFontScaling={false}
        >
          link
        </Text>
      </Text>
    </View>
    <View>
      <View />
      <Text
        allowFontScaling={false}
      >
        More example text.
      </Text>
    </View>
    <View>
      <View />
      <Text
        allowFontScaling={false}
      >
        Example text 
        <Text
          allowFontScaling={false}
        >
          this is bold 
        </Text>
        <Text
          allowFontScaling={false}
        >
          this is in italics.
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`2. key facts without title 1`] = `
<View>
  <View>
    <View>
      <View />
      <Text
        allowFontScaling={false}
      >
        Example bullet text
      </Text>
    </View>
    <View>
      <View />
      <Text
        allowFontScaling={false}
      >
        An example 
        <Text
          accessibilityRole="link"
          allowFontScaling={false}
        >
          link
        </Text>
      </Text>
    </View>
    <View>
      <View />
      <Text
        allowFontScaling={false}
      >
        More example text.
      </Text>
    </View>
    <View>
      <View />
      <Text
        allowFontScaling={false}
      >
        Example text 
        <Text
          allowFontScaling={false}
        >
          this is bold 
        </Text>
        <Text
          allowFontScaling={false}
        >
          this is in italics.
        </Text>
      </Text>
    </View>
  </View>
</View>
`;
